integration des maquette termine

--- a/index/template/index/401.html
+++ b/index/template/index/401.html
@@ -1,5 +1,5 @@
 {% extends "base_error.html" %}
-{% block  %}
+{% block content %}
 <main>
 <div class="container">
     <div class="row justify-content-center">
@@ -8,7 +8,7 @@
                 <h1 class="display-1">401</h1>
                 <p class="lead">Unauthorized</p>
                 <p>Access to this resource is denied.</p>
-                <a href="index.html">
+                <a href={% url "index" %}>
                     <i class="fas fa-arrow-left me-1"></i>
                     Return to Dashboard
                 </a>
