--- a/index/template/base.html
+++ b/index/template/base.html
@@ -73,9 +73,9 @@
                                     </a>
                                     <div class="collapse" id="pagesCollapseAuth" aria-labelledby="headingOne" data-bs-parent="#sidenavAccordionPages">
                                         <nav class="sb-sidenav-menu-nested nav">
-                                            <a class="nav-link" href="login.html">Login</a>
-                                            <a class="nav-link" href="register.html">Register</a>
-                                            <a class="nav-link" href="password.html">Forgot Password</a>
+                                            <a class="nav-link" href={% url "login" %}>Login</a>
+                                            <a class="nav-link" href={% url "register" %}>Register</a>
+                                            <a class="nav-link" href={% url "changer-password" %}>Forgot Password</a>
                                         </nav>
                                     </div>
                                     <a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#pagesCollapseError" aria-expanded="false" aria-controls="pagesCollapseError">
@@ -84,9 +84,9 @@
                                     </a>
                                     <div class="collapse" id="pagesCollapseError" aria-labelledby="headingOne" data-bs-parent="#sidenavAccordionPages">
                                         <nav class="sb-sidenav-menu-nested nav">
-                                            <a class="nav-link" href="401.html">401 Page</a>
-                                            <a class="nav-link" href="404.html">404 Page</a>
-                                            <a class="nav-link" href="500.html">500 Page</a>
+                                            <a class="nav-link" href={% url "error401" %}>401 Page</a>
+                                            <a class="nav-link" href={% url "error404" %}>404 Page</a>
+                                            <a class="nav-link" href={% url "error500" %}>500 Page</a>
                                         </nav>
                                     </div>
                                 </nav>
