--- a/index/template/index/404.html
+++ b/index/template/index/404.html
@@ -1,5 +1,5 @@
 {% extends "base_error.html" %}
-{% block  %}
+{% block  content %}
 <main>
 <div class="container">
     <div class="row justify-content-center">
@@ -7,7 +7,7 @@
             <div class="text-center mt-4">
                 <img class="mb-4 img-error" src="assets/img/error-404-monochrome.svg" />
                 <p class="lead">This requested URL was not found on this server.</p>
-                <a href="index.html">
+                <a href={% url "index" %}>
                     <i class="fas fa-arrow-left me-1"></i>
                     Return to Dashboard
                 </a>
