--- a/index/template/base_auth.html
+++ b/index/template/base_auth.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 <meta name="description" content="" />
 <meta name="author" content="" />
-<title>Login - SB Admin</title>
+<title>Login - GEDEBO</title>
 <link href={% static "css/styles.css"  %} rel="stylesheet" />
 <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
 </head>
@@ -19,14 +19,15 @@
             <div class="row justify-content-center">
                 <div class="col-lg-5">
                     <div class="card shadow-lg border-0 rounded-lg mt-5">
-                        <div class="card-header"><h3 class="text-center font-weight-light my-4">Login</h3></div>
+                        <div class="card-header"><h3 class="text-center font-weight-light my-4">GEDEBO</h3></div>
                             <div class="card-body">
                                 {% block content %}
 
                                 {% endblock content %}
                             </div>
                         <div class="card-footer text-center py-3">
-                            <div class="small"><a href="register.html">Need an account? Sign up!</a></div>
+                            <div class="small">Logiciel de gestion de débit de boisson !</div>
+                            <!-- <div class="small"><a href="register.html">Need an account? Sign up!</a></div> -->
                         </div>
                     </div>
                 </div>
@@ -38,11 +39,11 @@
     <footer class="py-4 bg-light mt-auto">
         <div class="container-fluid px-4">
             <div class="d-flex align-items-center justify-content-between small">
-                <div class="text-muted">Copyright &copy; Your Website 2023</div>
+                <div class="text-muted">Copyright &copy; GEDEBO 2024</div>
                 <div>
-                    <a href="#">Privacy Policy</a>
+                    <a href="#">Politique de confidentialité</a>
                     &middot;
-                    <a href="#">Terms &amp; Conditions</a>
+                    <a href="#">Termes &amp; Conditions</a>
                 </div>
             </div>
         </div>
