--- a/index/template/base.html
+++ b/index/template/base.html
@@ -7,7 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Dashboard - SB Admin</title>
+        <title>Accueil - GEDEBO</title>
         <link href="https://cdn.jsdelivr.net/npm/simple-datatables@7.1.2/dist/style.min.css" rel="stylesheet" />
         <link href={% static "css/styles.css" %} rel="stylesheet" />
         <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
@@ -15,7 +15,7 @@
     <body class="sb-nav-fixed">
         <nav class="sb-topnav navbar navbar-expand navbar-dark bg-dark">
             <!-- Navbar Brand-->
-            <a class="navbar-brand ps-3" href={% url 'index' %}>Start Bootstrap</a>
+            <a class="navbar-brand ps-3" href={% url 'index' %}>GEDEBO</a>
             <!-- Sidebar Toggle-->
             <button class="btn btn-link btn-sm order-1 order-lg-0 me-4 me-lg-0" id="sidebarToggle" href="#!"><i class="fas fa-bars"></i></button>
             <!-- Navbar Search-->
@@ -30,10 +30,10 @@
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false"><i class="fas fa-user fa-fw"></i></a>
                     <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-                        <li><a class="dropdown-item" href="#!">Settings</a></li>
-                        <li><a class="dropdown-item" href="#!">Activity Log</a></li>
+                        <li><a class="dropdown-item" href="#!">Paramètres</a></li>
+                        <li><a class="dropdown-item" href="#!">Log d'activités</a></li>
                         <li><hr class="dropdown-divider" /></li>
-                        <li><a class="dropdown-item" href="#!">Logout</a></li>
+                        <li><a class="dropdown-item" href="#!">Déconnexion</a></li>
                     </ul>
                 </li>
             </ul>
@@ -75,6 +75,7 @@
                                         <nav class="sb-sidenav-menu-nested nav">
                                             <a class="nav-link" href={% url "login" %}>Login</a>
                                             <a class="nav-link" href={% url "register" %}>Register</a>
+                                            <a class="nav-link" href={% url "register-debit" %}>Register Debit</a>
                                             <a class="nav-link" href={% url "changer-password" %}>Forgot Password</a>
                                         </nav>
                                     </div>
@@ -103,8 +104,8 @@
                         </div>
                     </div>
                     <div class="sb-sidenav-footer">
-                        <div class="small">Logged in as:</div>
-                        Start Bootstrap
+                        <div class="small">Connecté en tant que :</div>
+                        Yann Tamba
                     </div>
                 </nav>
             </div>
@@ -122,11 +123,11 @@
                 <footer class="py-4 bg-light mt-auto">
                     <div class="container-fluid px-4">
                         <div class="d-flex align-items-center justify-content-between small">
-                            <div class="text-muted">Copyright &copy; Your Website 2023</div>
+                            <div class="text-muted">Copyright &copy; GEDEBO 2024</div>
                             <div>
-                                <a href="#">Privacy Policy</a>
+                                <a href="#">Politique de confidentialité</a>
                                 &middot;
-                                <a href="#">Terms &amp; Conditions</a>
+                                <a href="#">Termes &amp; Conditions</a>
                             </div>
                         </div>
                     </div>
