--- a/index/template/index/login.html
+++ b/index/template/index/login.html
@@ -4,19 +4,19 @@
 <form>
 <div class="form-floating mb-3">
     <input class="form-control" id="inputEmail" type="email" placeholder="name@example.com" />
-    <label for="inputEmail">Email address</label>
+    <label for="inputEmail">Adresse Mail</label>
 </div>
 <div class="form-floating mb-3">
     <input class="form-control" id="inputPassword" type="password" placeholder="Password" />
-    <label for="inputPassword">Password</label>
+    <label for="inputPassword">Mot de passe</label>
 </div>
 <div class="form-check mb-3">
     <input class="form-check-input" id="inputRememberPassword" type="checkbox" value="" />
-    <label class="form-check-label" for="inputRememberPassword">Remember Password</label>
+    <label class="form-check-label" for="inputRememberPassword">Se rappeler de moi</label>
 </div>
 <div class="d-flex align-items-center justify-content-between mt-4 mb-0">
-    <a class="small" href="password.html">Forgot Password?</a>
-    <a class="btn btn-primary" href="index.html">Login</a>
+    <a class="small" href="password.html">Mot de passe oublié ?</a>
+    <a class="btn btn-primary" href="index.html">Se connecter</a>
 </div>
 </form>
 {% endblock content %}
