--- a/index/template/index/register-debit.html
+++ b/index/template/index/register-debit.html
@@ -3,18 +3,12 @@
 
 
 <form>
-
+    
     <div class="row mb-3">
-        <div class="col-md-6">
+        <div class="col-md-12">
             <div class="form-floating mb-3 mb-md-0">
-                <input class="form-control" id="inputFirstName" type="text" placeholder="Enter your first name" />
-                <label for="inputFirstName">Prénom</label>
-            </div>
-        </div>
-        <div class="col-md-6">
-            <div class="form-floating">
-                <input class="form-control" id="inputLastName" type="text" placeholder="Enter your last name" />
-                <label for="inputLastName">Nom</label>
+                <input class="form-control" id="inputCompanyName" type="text" placeholder="Enter your first name" />
+                <label for="inputCompanyName">Nom de la structure</label>
             </div>
         </div>
     </div>
@@ -22,17 +16,6 @@
     <div class="form-floating mb-3">
         <input class="form-control" id="inputEmail" type="email" placeholder="name@example.com" />
         <label for="inputEmail">Adresse Mail</label>
-    </div>
-
-    <div class="row mb-3">
-        <div class="form-group">
-        <select class="form-control" id="userRole">
-            <option value="">Sélectionnez un rôle</option>
-            <option value="admin">Administrateur</option>
-            <option value="manager">Opérateur de saisi(OPS) </option>
-            <option value="user">Commercial</option>
-        </select>
-        </div>
     </div>
 
     <div class="row mb-3">
@@ -51,8 +34,8 @@
     </div>
 
     <div class="mt-4 mb-0">
-        <div class="d-grid"><a class="btn btn-primary btn-block" href="login.html">Créer un compte utilsateur</a></div>
+        <div class="d-grid"><a class="btn btn-primary btn-block" href="login.html">Créer un dépôt de boisson</a></div>
     </div>
-    
+
 </form>
 {% endblock content %}
